[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/UI/UI.gd" type="Script" id=1]
[ext_resource path="res://assets/Dropbox/Art/UI/ui_rightcornercorner.png" type="Texture" id=2]
[ext_resource path="res://assets/Dropbox/Art/UI/ui_leftcorner.png" type="Texture" id=3]
[ext_resource path="res://src/UI/PlayerHealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Dropbox/Art/bron/bullet_basic.png" type="Texture" id=5]
[ext_resource path="res://assets/Dropbox/Art/bron/better_gun.png" type="Texture" id=6]
[ext_resource path="res://src/UI/StaminaBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Fonts/RobotoRegular.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/Dropbox/Art/tlo/end_base_small2.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
resource_name = "hide_tutorial"
tracks/0/type = "bezier"
tracks/0/path = NodePath("CanvasLayer/DebugTutorial:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CanvasLayer/DebugTutorial:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CanvasLayer/DebugTutorial:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CanvasLayer/DebugTutorial:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=2]
resource_name = "show_tutorial"
tracks/0/type = "bezier"
tracks/0/path = NodePath("CanvasLayer/DebugTutorial:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CanvasLayer/DebugTutorial:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CanvasLayer/DebugTutorial:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CanvasLayer/DebugTutorial:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 517.039 ],
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TopLeft" type="Control" parent="CanvasLayer"]
margin_right = 96.0
margin_bottom = 51.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/TopLeft"]
margin_right = 96.0
margin_bottom = 51.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealthBar" parent="CanvasLayer/TopLeft/TextureRect" instance=ExtResource( 4 )]
margin_left = 4.5962
margin_top = 6.36396
margin_right = -91.4038
margin_bottom = -44.636

[node name="StaminaBar" parent="CanvasLayer/TopLeft/TextureRect" instance=ExtResource( 7 )]
margin_left = 28.0332
margin_top = 33.7029
margin_right = -67.9668
margin_bottom = -17.2971

[node name="BottomRight" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -280.0
margin_top = -94.0
margin_right = -140.0
margin_bottom = -47.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponUI" type="TextureRect" parent="CanvasLayer/BottomRight"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/BottomRight/WeaponUI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -33.0
margin_top = -26.0
margin_right = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mag" type="Label" parent="CanvasLayer/BottomRight/WeaponUI/HBoxContainer"]
modulate = Color( 0.286275, 0.121569, 0.247059, 1 )
margin_top = 12.0
margin_right = 26.0
margin_bottom = 14.0
rect_min_size = Vector2( 26, 0 )
custom_fonts/font = ExtResource( 8 )
text = "111"
align = 2
valign = 1

[node name="slash" type="Label" parent="CanvasLayer/BottomRight/WeaponUI/HBoxContainer"]
modulate = Color( 0.286275, 0.121569, 0.247059, 1 )
margin_left = 30.0
margin_top = 12.0
margin_right = 31.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 8 )
text = "/"
valign = 1

[node name="ammo" type="Label" parent="CanvasLayer/BottomRight/WeaponUI/HBoxContainer"]
modulate = Color( 0.286275, 0.121569, 0.247059, 1 )
margin_left = 35.0
margin_top = 12.0
margin_right = 61.0
margin_bottom = 14.0
rect_min_size = Vector2( 26, 0 )
custom_fonts/font = ExtResource( 8 )
text = "âˆž"
valign = 1

[node name="Ammo" type="TextureRect" parent="CanvasLayer/BottomRight/WeaponUI"]
margin_left = 9.0
margin_top = 23.0
margin_right = 25.0
margin_bottom = 39.0
texture = ExtResource( 5 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon" type="TextureRect" parent="CanvasLayer/BottomRight/WeaponUI"]
margin_left = 111.0
margin_top = 8.0
margin_right = 133.0
margin_bottom = 28.0
texture = ExtResource( 6 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugTutorial" type="ColorRect" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -315.0
margin_right = 204.0
color = Color( 1, 1, 1, 0.117647 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DebugTutorial"]
modulate = Color( 1, 1, 1, 0.588235 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hide" type="Label" parent="CanvasLayer/DebugTutorial/VBoxContainer"]
margin_right = 184.0
margin_bottom = 2.0
custom_fonts/font = ExtResource( 8 )
text = "Press H to hide"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer/DebugTutorial/VBoxContainer"]
margin_top = 22.0
margin_right = 184.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 8 )
text = "WASD - move
SPACE - dash
Mouse - aim, shoot
R - reload
P - restart game
M - mute music
k - toggle fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="CanvasLayer/DebugTutorial/VBoxContainer"]
modulate = Color( 1, 0.333333, 0.345098, 1 )
margin_top = 74.0
margin_right = 184.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 8 )
text = "Kill aliens."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/DebugTutorial/VBoxContainer"]
modulate = Color( 0.917647, 0.94902, 0.345098, 1 )
margin_top = 96.0
margin_right = 184.0
margin_bottom = 140.0

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/DebugTutorial/VBoxContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 44.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/DebugTutorial/VBoxContainer/HBoxContainer"]
margin_left = 36.0
margin_top = 21.0
margin_right = 45.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 8 )
text = "Find pod."

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide_tutorial = SubResource( 1 )
anims/show_tutorial = SubResource( 2 )
